--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,10 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -22,10 +26,261 @@
   width: 568px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.header__title {
+  line-height: 96px;
+  width: 730px;
+  font-size: 102px;
+  font-weight: bold;
+  position: absolute;
+  left: 64px;
+  z-index: 1;
+  margin: 0;
+
+}
+
+.header__subtitle {
+  line-height: 25px;
+  width: 388px;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  z-index: 1;
+}
+
+.header__logo_place {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.header__square-pic {
+  width: 568px;
+  height: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  background-image: url(../images/header-image.png);
+  background-size: cover;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.description {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  }
+
+.description__cover {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  }
+
+.description__cover__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+
+}
+
+.description__cover__main-text {
+  width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.description__cover__main-text_conc {
+  margin: 30px 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.description__cover__main-text_par {
+  margin: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.description__cover__main-text_mark {
+  font-weight: 600;
+}
+
+.section-title {
+  text-align: center;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+
+}
+
+.section-title_theme_white {
+  margin: 100px auto 20px;
+}
+
+.section-title_theme_dark{
+  color: white;
+  margin: 90px auto 20px;
+  z-index: 2;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin:0 auto 0;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border: 1px solid red;
+}
+
+.table_theme_white {
+  margin: 0 auto 100px;
+}
+
+.table_theme_dark {
+  margin: 0 auto 90px;
+  border: 1px solid red;
+  z-index: 2;
+}
+
+.table__cell {
+  margin-top: 60px;
+  width: 250px;
+}
+
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  border: 1px solid red;
+}
+
+
+.table__cell__heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__cell__text {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.table__cell__text_theme_dark {
+  margin-top: 20px;
+  margin-bottom: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+
+}
+
+.table__cell__text_int {
+  margin-top: 0;
+  margin-bottom: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.feynman {
+  height: 890px;
+  background-color: #f2f2f2;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  margin: 0;
+}
+
+.feynman__common {
+  margin-top: 100px;
+  flex-direction: column;
+  z-index: 2;
+}
+
+.feynman__common__title {
+  margin: 0;
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.feynman__common__subtitle {
+  margin: 70px 0 0 0;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  align-items: center;
+  position: absolute;
+  right: 48px;
+  align-self: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__photo {
+  width: 867px;
+  height: 637px;
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
+  position: relative;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  top: 0;
+  right: -200px;
+  position: absolute;
 }
