--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,6 +1,8 @@
 .cards {
   max-width: 920px;
   margin: 0 auto 0;
+  padding: 0;
   display: flex;
   flex-wrap: wrap;
+  list-style-type: none;
 }
