--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -5,6 +5,8 @@
   font-weight: normal;
   text-decoration: none;
   color: white;
+  display: flex;
+  align-items: center;
   transition: opacity .5s ease-in-out;
 }
 
