--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -2,7 +2,7 @@
   line-height: 96px;
   max-width: 730px;
   font-size: 102px;
-  font-weight: 600;
+  font-weight: bold;
   z-index: 1;
   margin: 0 0 0 64px;
 }
