--- a/pages/index.css
+++ b/pages/index.css
@@ -67,3 +67,4 @@
 @import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
 @import url(../blocks/resources/__logo/resources__logo.css);
 @import url(../blocks/resources/__link/resources__link.css);
+@import url(../blocks/__quote/quote.css);
